panama-src/genai/ffi/genai/ort_genai_c_h.java


    /**
     * Address for:
     * {@snippet lang=c :
     * const int32_t *OgaSequencesGetSequenceData(const OgaSequences *sequences, size_t sequence_index)
     * }
     */
    public static MemorySegment OgaSequencesGetSequenceData$address() {
        return OgaSequencesGetSequenceData.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const int32_t *OgaSequencesGetSequenceData(const OgaSequences *sequences, size_t sequence_index)
     * }
     */
    public static MemorySegment OgaSequencesGetSequenceData(MemorySegment sequences, long sequence_index) {
        var mh$ = OgaSequencesGetSequenceData.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaSequencesGetSequenceData", sequences, sequence_index);
            }
            return (MemorySegment)mh$.invokeExact(sequences, sequence_index);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaLoadImage {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaLoadImage");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadImage(const char *image_path, OgaImages **images)
     * }
     */
    public static FunctionDescriptor OgaLoadImage$descriptor() {
        return OgaLoadImage.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadImage(const char *image_path, OgaImages **images)
     * }
     */
    public static MethodHandle OgaLoadImage$handle() {
        return OgaLoadImage.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadImage(const char *image_path, OgaImages **images)
     * }
     */
    public static MemorySegment OgaLoadImage$address() {
        return OgaLoadImage.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaLoadImage(const char *image_path, OgaImages **images)
     * }
     */
    public static MemorySegment OgaLoadImage(MemorySegment image_path, MemorySegment images) {
        var mh$ = OgaLoadImage.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaLoadImage", image_path, images);
            }
            return (MemorySegment)mh$.invokeExact(image_path, images);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaLoadImages {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaLoadImages");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadImages(const OgaStringArray *image_paths, OgaImages **images)
     * }
     */
    public static FunctionDescriptor OgaLoadImages$descriptor() {
        return OgaLoadImages.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadImages(const OgaStringArray *image_paths, OgaImages **images)
     * }
     */
    public static MethodHandle OgaLoadImages$handle() {
        return OgaLoadImages.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadImages(const OgaStringArray *image_paths, OgaImages **images)
     * }
     */
    public static MemorySegment OgaLoadImages$address() {
        return OgaLoadImages.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaLoadImages(const OgaStringArray *image_paths, OgaImages **images)
     * }
     */
    public static MemorySegment OgaLoadImages(MemorySegment image_paths, MemorySegment images) {
        var mh$ = OgaLoadImages.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaLoadImages", image_paths, images);
            }
            return (MemorySegment)mh$.invokeExact(image_paths, images);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaLoadImagesFromBuffers {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_LONG,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaLoadImagesFromBuffers");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadImagesFromBuffers(const void **image_data, const size_t *image_data_sizes, size_t count, OgaImages **images)
     * }
     */
    public static FunctionDescriptor OgaLoadImagesFromBuffers$descriptor() {
        return OgaLoadImagesFromBuffers.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadImagesFromBuffers(const void **image_data, const size_t *image_data_sizes, size_t count, OgaImages **images)
     * }
     */
    public static MethodHandle OgaLoadImagesFromBuffers$handle() {
        return OgaLoadImagesFromBuffers.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadImagesFromBuffers(const void **image_data, const size_t *image_data_sizes, size_t count, OgaImages **images)
     * }
     */
    public static MemorySegment OgaLoadImagesFromBuffers$address() {
        return OgaLoadImagesFromBuffers.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaLoadImagesFromBuffers(const void **image_data, const size_t *image_data_sizes, size_t count, OgaImages **images)
     * }
     */
    public static MemorySegment OgaLoadImagesFromBuffers(MemorySegment image_data, MemorySegment image_data_sizes, long count, MemorySegment images) {
        var mh$ = OgaLoadImagesFromBuffers.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaLoadImagesFromBuffers", image_data, image_data_sizes, count, images);
            }
            return (MemorySegment)mh$.invokeExact(image_data, image_data_sizes, count, images);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaDestroyImages {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaDestroyImages");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void OgaDestroyImages(OgaImages *images)
     * }
     */
    public static FunctionDescriptor OgaDestroyImages$descriptor() {
        return OgaDestroyImages.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void OgaDestroyImages(OgaImages *images)
     * }
     */
    public static MethodHandle OgaDestroyImages$handle() {
        return OgaDestroyImages.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void OgaDestroyImages(OgaImages *images)
     * }
     */
    public static MemorySegment OgaDestroyImages$address() {
        return OgaDestroyImages.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void OgaDestroyImages(OgaImages *images)
     * }
     */
    public static void OgaDestroyImages(MemorySegment images) {
        var mh$ = OgaDestroyImages.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaDestroyImages", images);
            }
            mh$.invokeExact(images);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaLoadAudio {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaLoadAudio");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadAudio(const char *audio_path, OgaAudios **audios)
     * }
     */
    public static FunctionDescriptor OgaLoadAudio$descriptor() {
        return OgaLoadAudio.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadAudio(const char *audio_path, OgaAudios **audios)
     * }
     */
    public static MethodHandle OgaLoadAudio$handle() {
        return OgaLoadAudio.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadAudio(const char *audio_path, OgaAudios **audios)
     * }
     */
    public static MemorySegment OgaLoadAudio$address() {
        return OgaLoadAudio.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaLoadAudio(const char *audio_path, OgaAudios **audios)
     * }
     */
    public static MemorySegment OgaLoadAudio(MemorySegment audio_path, MemorySegment audios) {
        var mh$ = OgaLoadAudio.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaLoadAudio", audio_path, audios);
            }
            return (MemorySegment)mh$.invokeExact(audio_path, audios);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaLoadAudios {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaLoadAudios");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadAudios(const OgaStringArray *audio_paths, OgaAudios **audios)
     * }
     */
    public static FunctionDescriptor OgaLoadAudios$descriptor() {
        return OgaLoadAudios.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadAudios(const OgaStringArray *audio_paths, OgaAudios **audios)
     * }
     */
    public static MethodHandle OgaLoadAudios$handle() {
        return OgaLoadAudios.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadAudios(const OgaStringArray *audio_paths, OgaAudios **audios)
     * }
     */
    public static MemorySegment OgaLoadAudios$address() {
        return OgaLoadAudios.ADDR;
    }
